--- a/simple.html
+++ b/simple.html
@@ -14,11 +14,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			This is the changed info.
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; ISU Cauayan 2025</p>
 	</footer>
 </body>
 </html>
